@@ -7,7 +7,8 @@ Bug Fixes:
 2221495 : XYLineAnnotation with dashed stroke;
 2216511 : SWTBarChartDemo1 throws RuntimeException;
 2121818 : Label link lines for very thin RingPlot;
-2113627 : XYStepRenderer item labels.
+2113627 : XYStepRenderer item labels;
+1955483 : XYSeries.addOrUpdate() problem.
 
 Also fixed StackedXYBarRenderer which was ignoring the shadowsVisible attribute.
 
